tests/ui/const-generics/mgca/array-expr-complex.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/array-expr-complex.rs:8:28
   |
LL |     takes_array::<{ [1, 2, 1 + 2] }>();
   |                            ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/array-expr-complex.rs:10:19
   |
LL |     takes_array::<{ [X; 3] }>();
   |                   ^^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/array-expr-complex.rs:12:19
   |
LL |     takes_array::<{ [0; Y] }>();
   |                   ^^^^^^^^^^

error: aborting due to 3 previous errors

